--- a/app/package.json
+++ b/app/package.json
@@ -11,8 +11,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mssql": "^11.0.1",
-    "bcrypt": "5.1.1",
-    "ejs": ""
+    "ejs": "3.1.10",
+    "multer":"1.4.5-lts.2"
   },
   "author": "tho493",
   "license": "ISC"
